# Robotics

./: .gitignore  AGENT.md  CHANGELOG.md  README.md  april_tag_localisation.py  april_tag_pose.py  april_tag_slam.py  april_tagçlocalisation.py  auto_detetc_tag_arduino.py  calibrate_camera.py  calibrate_markers.py  color_detection_test.py  main.py  requirements.txt
Micro_ROS_Project/: README.md  SPEC.md  color_detection_test.py  hsv_tuner.py
Micro_ROS_Project/docs/: CALIBRATION.md  NAVIGATION.md
Micro_ROS_Project/esp32_firmware/: README_ESP32.md  micro_ros_esp32Robot.ino
Micro_ROS_Project/ubuntu_ros2/: README.md  README_ROS2_NODES.md  calibrate_camera.py  camera_calibration.json  camera_node.py  flask_ros_bridge.py  launch_micro_ros.sh  localization_node.py  lstm_assistant.py  mission_engine.py  navigation_node.py  requirements-lstm.txt  robot_bringup.launch.py  task_manager_node.py  test_astar_path.py  test_fault_recovery.py  test_pid_controller.py  test_robot_state.py  test_sensor_manager.py  test_smart_gripper.py  train_lstm.py
Micro_ROS_Project/ubuntu_ros2/micro_ros_robot/: package.xml
Micro_ROS_Project/ubuntu_ros2/micro_ros_robot/scripts/: auto_scan.py  fault_recovery.py  robot_state.py  sensor_manager.py  smart_gripper.py
data/: missions_default.json  robot_config.json
data/camera_calibration/: camera_calibration.json
data/missions/: missions.json
data/reference_markers/: reference_markers.json
data/tags/: tags.json
test_PID_auto/: GUIDE_REGLAGE.md  README.md  app.py  drive_assist_model.pt  export_rpi.py  import_rpi.py  industrial_ai.py
(+7 files in other folders)
